Bug 277081 - [Baseline] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-baseline-multi-line-vert-001-expected.html
Summary: [Baseline] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-baseli...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-07-25 07:22 PDT by zalan
Modified: 2024-07-25 08:37 PDT (History)
5 users (show)

See Also:


Attachments
[fast-cq]Patch (5.51 KB, patch)
2024-07-25 07:25 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2024-07-25 07:22:13 PDT
ssia
Comment 1 zalan 2024-07-25 07:25:38 PDT
Created attachment 471964 [details]
[fast-cq]Patch
Comment 2 EWS 2024-07-25 08:36:03 PDT
Committed 281353@main (76bd9ad78d4e): <https://commits.webkit.org/281353@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 471964 [details].
Comment 3 Radar WebKit Bug Importer 2024-07-25 08:37:15 PDT
<rdar://problem/132490620>