[Baseline] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-baseline-multi-line-vert-001-expected.html https://bugs.webkit.org/show_bug.cgi?id=277081

Reviewed by Antti Koivisto.

"Last line baseline" functions should use the last line with inline content.

(In case of trailing out-of-flow or float content, we need to construct an empty
line (only root inline box is present), but this line should not participate in baseline handling)

* LayoutTests/TestExpectations:
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::lastLineWithInlineContent):
(WebCore::LayoutIntegration::LineLayout::contentBoxLogicalHeight const):
(WebCore::LayoutIntegration::LineLayout::firstLinePhysicalBaseline const):
(WebCore::LayoutIntegration::LineLayout::lastLinePhysicalBaseline const):
(WebCore::LayoutIntegration::LineLayout::lastLineLogicalBaseline const):

Canonical link: https://commits.webkit.org/281353@main